# studentID_OCR

./: .gitignore  Dockerfile  Jenkinsfile  README.md  app.py  docker-compose-dev.yml  docker-compose.yml  init-letsencrypt.sh  main.py  pip.conf  pyproject.toml  requirements.txt  test.py  test_app.py
backend_flask_server/: .gitignore
backend_flask_server/src/response/: button.py
config/: logging.py
nginx/: Dockerfile  default.conf
nginx/conf.d/: default.conf
src/cafeteria/: cafeteria.py
src/cafeteria/tests/: test_cafeteria.py
src/card_verification/: __init__.py  verification.py  welcome_message.py
src/card_verification/tests/: test_verification.py
src/common/: user.py
src/common/utils/: logging.py  sentry.py  slack.py  supabase.py
src/controllers/: cafeteria_controller.py  card_verification_controller.py
src/models/: college_dto.py  department_dto.py  user_dao.py
src/notice/: notice.py
src/response/: basic_card.py  list_card.py  parameter_validation.py
src/services/: cafeteria_service.py  card_verification_service.py
src/utils/: slack.py  supabase.py
templates/: index.html  serviceWorker.js
