[tool.poetry]
name = "connect-gnu-python"
version = "0.1.0"
description = ""
authors = ["Jang-DongHo <donghoo18@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.6.0"
anyio = "4.3.0"
blinker = "1.7.0"
build = "1.2.1"
cachecontrol = "0.14.0"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
crashtest = "0.4.1"
deprecation = "2.1.0"
distlib = "0.3.8"
dulwich = "0.21.7"
exceptiongroup = "1.2.0"
fastjsonschema = "2.19.1"
filelock = "3.13.3"
flask = "3.0.2"
fsspec = "2024.3.1"
gotrue = "2.4.2"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
idna = "3.6"
importlib-metadata = "7.1.0"
installer = "0.7.0"
itsdangerous = "2.1.2"
jaraco-classes = "3.4.0"
jinja2 = "3.1.3"
keyring = "24.3.1"
load-dotenv = "0.1.0"
markupsafe = "2.1.5"
more-itertools = "10.2.0"
mpmath = "1.3.0"
msgpack = "1.0.8"
networkx = "3.2.1"
numpy = "1.26.4"
packaging = "24.0"
pexpect = "4.9.0"
pillow = "10.2.0"
pkginfo = "1.10.0"
platformdirs = "4.2.0"
poetry = "1.8.2"
poetry-core = "1.9.0"
poetry-plugin-export = "1.7.1"
postgrest = "0.16.2"
ptyprocess = "0.7.0"
pydantic = "2.6.4"
pydantic-core = "2.16.3"
pyproject-hooks = "1.0.0"
pytesseract = "0.3.10"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pywin32-ctypes = "0.2.2"
rapidfuzz = "3.8.1"
realtime = "1.0.3"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
storage3 = "0.7.4"
strenum = "0.4.15"
supabase = "2.4.1"
supafunc = "0.4.5"
sympy = "1.12"
tomlkit = "0.12.4"
torch = "2.2.2"
torchvision = "0.17.2"
trove-classifiers = "2024.3.25"
typing-extensions = "4.10.0"
urllib3 = "2.2.1"
virtualenv = "20.25.1"
websockets = "12.0"
werkzeug = "3.0.1"
zipp = "3.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
